--- a/workspace/test/.classpath
+++ b/workspace/test/.classpath
@@ -5,5 +5,18 @@
 	<classpathentry kind="lib" path="lib/sqlite-jdbc4-3.8.2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/swingx-core-1.6.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/docx4j-3.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/jul-to-slf4j-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-over-slf4j-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/osgi-over-slf4j-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-ext-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-migrator-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-nop-1.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
