--- a/workspace/test/.classpath
+++ b/workspace/test/.classpath
@@ -19,5 +19,7 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.7.jar"/>
 	<classpathentry kind="lib" path="lib/xmlgraphics-commons-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="lib/joda-time-2.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
