--- a/workspace/test/.classpath
+++ b/workspace/test/.classpath
@@ -21,5 +21,8 @@
 	<classpathentry kind="lib" path="lib/xmlgraphics-commons-1.5.jar"/>
 	<classpathentry kind="lib" path="lib/joda-time-2.4-sources.jar"/>
 	<classpathentry kind="lib" path="lib/joda-time-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="lib/jackcess-2.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/ucanaccess-2.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
